# light_old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/sources/: MainGame.cpp  main.cpp
doc/: Entity.md  Lua_API.md  System.md
editor/: CMakeLists.txt
editor/include/: MainGame.h
editor/sources/: MainGame.cpp  main.cpp
extlibs/: CMakeLists.txt
extlibs/Box2D/: CMakeLists.txt
light/: CMakeLists.txt
light/include/: Light.h
light/include/components/: Transform.h
light/include/core/: Application.h  ServiceLocator.h  State.h  StateMachine.h  System.h  World.h
light/include/fs/: FileSystem.h  IOUtils.h
light/include/graphics/: Window.h
light/include/sol2/: sol.hpp
light/include/systems/: RenderSystem.h
light/sources/core/: Application.cpp  StateMachine.cpp  System.cpp  World.cpp
light/sources/fs/: FileSystem.cpp  IOUtils.cpp
light/sources/graphics/: Window.cpp
light/sources/systems/: RenderSystem.cpp
test/: CMakeLists.txt
test/sources/: components.h  main.cpp  registry.h  system.cpp  system.h  world.cpp  world.h
